--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@ header .actions .primary{background:#0063f7;color:#fff;}
 // STREAMS Y CANALES
 // =========================
 var streams = {
-  tyc: "https://kh5vy.envivoslatam.org/hotflix/tycsports/index.m3u8?token=307c02772e545ba15da97b7e775b5a8c6db76c3f-0b-1769061765-1769007765&ip=190.175.32.169",
-  dsports: "https://j8nte.envivoslatam.org/hotflix/dsports/index.m3u8?token=306eed1633804dddb21da741bc3253175279eb52-06-1769062030-1769008030&ip=190.175.32.169",
-  tnt: "https://pvtn5y.envivoslatam.org/hotflix/tntsports/index.m3u8?token=97d38c6056a699184af45c1eb7f448c3275a9928-1a-1769062122-1769008122&ip=190.175.32.169",
-  fox: "https://pvtn5y.envivoslatam.org/hotflix/foxsports/index.m3u8?token=b641858938b9d3714768375ceb35f8cdfc652551-13-1769062325-1769008325&ip=190.175.32.169",
-  espnpremium: "https://tk0hz.envivoslatam.org/hotflix/espnpremium/index.m3u8?token=ed4f69aefcd84f0d13871e7711beac5633883616-1b-1769062410-1769008410&ip=190.175.32.169",
+  tyc: "https://ub2dr.envivoslatam.org/hotflix/tycsports/index.m3u8?token=ed3cebd4fbfa1e3172e632a6b4c2be98be31201e-89-1769087052-1769033052&ip=190.175.10.14",
+  dsports: "https://tk0hz.envivoslatam.org/hotflix/dsports/index.m3u8?token=d65bf41b75dff2d3c9fef10acf8c7cf012763a0a-26-1769090096-1769036096&ip=190.175.10.14",
+  tnt: "https://vg7ie.envivoslatam.org/hotflix/tntsports/index.m3u8?token=35be13b25df513ca303a02f1017c8a07dd940158-71-1769090123-1769036123&ip=190.175.10.14",
+  fox: "https://kh5vy.envivoslatam.org/hotflix/foxsports/index.m3u8?token=210bc153eecbcfbcd3f829343af3a2683346cd73-55-1769087212-1769033212&ip=190.175.10.14",
+  espnpremium: "https://yce5o.envivoslatam.org/hotflix/espnpremium/index.m3u8?token=539a34b97070d5ff1d8e201bf7c0454fd3ca96e4-de-1769087259-1769033259&ip=190.175.10.14",
   espn1: "https://smjt9q.envivoslatam.org/hotflix/espn/index.m3u8?token=bd23113350f8f7909f4e6e16e378b8c5c0cacc04-c1-1768976676-1768922676&ip=190.175.32.169",
   espn2: "https://tk0hz.envivoslatam.org/hotflix/espn2/index.m3u8?token=149cbc039861383e192a6dfd55659082ee08cfd0-67-1769068835-1769014835&ip=190.175.32.169",
   espn3: "https://kh5vy.envivoslatam.org/hotflix/espn3/index.m3u8?token=98ba11b4fffbe8d23d662c696289c308c3131e21-66-1769069005-1769015005&ip=190.175.32.169",
@@ -108,7 +108,7 @@ var streams = {
   disney8: "https://xky9q.envivoslatam.org/hotflix/disney8/index.m3u8?token=b14fb532ddbcd03a81063edbbcb2e00aa8665e49-23-1769069179-1769015179&ip=190.175.32.169",
   tntsportschile: "https://tk0hz.envivoslatam.org/hotflix/tntsportschile/index.m3u8?token=76ed9ef3950dfa8840d66078d3fbd765642f83d2-0e-1769069204-1769015204&ip=190.175.32.169",
   premiere1: "https://ng0pr.envivoslatam.org/hotflix/premiere1/index.m3u8?token=c549435a1d47e993e64adb985f378715601174f5-0e-1769069221-1769015221&ip=190.175.32.169",
-  sporttvbr1: "https://smjt9q.envivoslatam.org/hotflix/sporttvbr1/index.m3u8?token=ab8effe0635d080e3514900ecf307f099c418073-97-1769069246-1769015246&ip=190.175.32.169",
+  sporttvbr1: "https://pvtn5y.envivoslatam.org/hotflix/sporttvbr1/index.m3u8?token=64f195048c45a6a1b2f9256c5569732dd6fee06f-80-1769087913-1769033913&ip=190.175.10.14",
   max1: "https://iaw5b.envivoslatam.org/hotflix/max1/index.m3u8?token=1707f133f711aaa16eabe4c50e8fb0f7f6b31d87-c3-1769069271-1769015271&ip=190.175.32.169"
 };
 
@@ -125,20 +125,7 @@ var canales = [
 
 // Array de partidos actualizado con logos
 var partidos = [
-  {liga:"UEFA Champions League", local:"Slavia Praha", visitante:"Barcelona", hora:"17:00", canal:"espn2", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
-  {liga:"UEFA Champions League", local:"Bayern München", visitante:"Union Saint-Gilloise", hora:"17:00", canal:"espn", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
-  {liga:"UEFA Champions League", local:"Chelsea", visitante:"Paphos", hora:"17:00", canal:"espn3", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
-  {liga:"UEFA Champions League", local:"Atalanta", visitante:"Athletic Club", hora:"17:00", canal:"espn4", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
-  {liga:"UEFA Champions League", local:"Olympique Marseille", visitante:"Liverpool", hora:"17:00", canal:"fox", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
-  {liga:"UEFA Champions League", local:"Newcastle United", visitante:"PSV", hora:"17:00", canal:"espn6", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
-  {liga:"UEFA Champions League", local:"Juventus", visitante:"Benfica", hora:"17:00", canal:"fox2ar", logo:"https://upload.wikimedia.org/wikipedia/commons/e/e2/UEFA_Champions_League_logo.png"},
-
-  {liga:"Championship", local:"Stoke City", visitante:"Middlesbrough", hora:"17:00", canal:"disney8", logo:"https://upload.wikimedia.org/wikipedia/en/thumb/0/0f/EFL_Championship_Logo.svg/960px-EFL_Championship_Logo.svg.png"},
-  {liga:"Supercopa de Chile", local:"Coquimbo Unido", visitante:"Deportes Limache", hora:"19:00", canal:"tntsportschile", logo:"https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjJvDBvJMXwk3O1Ei5PLwYeHSmGioWo9ok50eG9PLRNOOMFUmU0xBpmYj79KAD5QMRQw-PRIoil_0e76htxEhnbacRfNNaHuoIcYaeyYGzRCCZJBItqTaDuHSGKuzjZklMvCV3ipdLa5lnRrjAAi03MndCrLN4pyDo10SQ-_nuy3K8l_L7P2TZzivOxVDk/s16000/Supercopa%20Construmart.png"},
-  {liga:"Campeonato Carioca", local:"Botafogo", visitante:"Volta Redonda", hora:"19:00", canal:"premiere1", logo:"https://i.imgur.com/s3ZYvRm.png"},
-  {liga:"Campeonato Carioca", local:"Flamengo", visitante:"Vasco da Gama", hora:"21:30", canal:"?", logo:"https://i.imgur.com/s3ZYvRm.png"},
-  {liga:"Campeonato Gaúcho", local:"Internacional", visitante:"Inter Santa Maria", hora:"19:00", canal:"sporttvbr1", logo:"https://www.ceroacero.es/img/logos/competicoes/904_imgbank_rs1_20250312164114.png"},
-  {liga:"Campeonato Paulista A1", local:"Mirassol", visitante:"RB Bragantino", hora:"20:00", canal:"max1", logo:"https://upload.wikimedia.org/wikipedia/pt/1/1c/Paulist%C3%A3o_2026.png?20260102051135"},
+  {liga:"Campeonato Carioca", local:"Flamengo", visitante:"Vasco da Gama", hora:"21:30", canal:"sporttvbr1", logo:"https://i.imgur.com/s3ZYvRm.png"},
   {liga:"Serie Río de la Plata", local:"Colo-Colo", visitante:"Peñarol", hora:"21:00", canal:"espnpremium", logo:"https://i.imgur.com/mpW7IqU.png"},
   {liga:"Copa Argentina", local:"Argentinos Juniors", visitante:"Midland", hora:"21:15", canal:"tyc", logo:"https://upload.wikimedia.org/wikipedia/en/thumb/a/aa/Copa_argentina_logo22.png/250px-Copa_argentina_logo22.png"},
 ];
@@ -193,4 +180,3 @@ if ('serviceWorker' in navigator) {
 
 </body>
 </html>
-
